<?xml version="1.0"?>
<package format="3">
  <name>tmrrt_exploration</name>
  <version>1.0.0</version>
  <description>A ROS package that uses temporal memory-based exploration strategy to explore unknown area autonomously</description>

  <author>billy</author>
  <maintainer email="billy_lau@sutd.edu.sg">Billy Lau</maintainer>

  <license>MIT</license>
  <url>http://wiki.ros.org/tmrrt_exploration</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rclcpp</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
